# ashp4c

./: .gitignore  0name_decl.c  0potential_type.c  0select_type.c  AST.odt  AST.rtf  CMakeLists.txt  README.md  arena.c  arena.cpp  arena.h  array.c  array.cpp  array.h  ashp4c.c  ashp4c.cpp  ashp4c.epr  ashp4c.h  ast.c  ast.cpp  ast.h  ast_.h  ast_tree.c  ast_tree.cpp  ast_tree.h  ast_visitor.cpp  ast_visitor.h  ast_walk.c  basic.c  basic.cpp  basic.h  build.sh  build_ast.c  build_ast.h  build_cst.c  build_cst.h  build_nameref.c  build_nameref.h  build_nameref1.h  build_symtable.c  (+152 more)
.vimprj/: indexer_files  init.vim
adt/: array.cpp  array.h  basic.h  cstring.cpp  list.cpp  map.cpp  map.h  strmap.cpp  strmap.h  tree.cpp  tree.h
doc/: NOTES.txt
ebpf/: .gitignore  bpf.h  bpf_helpers.h  bpf_insn.h  bpf_load.c  bpf_load.h  bpf_util.h  build.sh  count_packets.c  count_packets_kern.c  ebpf_raw_assembly.c  libbpf.h  mcastfwd.c  mcastfwd_k.c  nohup.out  perf-sys.h  sock_example  sock_example.c  sock_example.h  test  test.insn  xdp_example_drop.c  xdp_hello_world.c  xdp_ip_fixup.c  xdp_ip_fixup_kern.c  xdp_parse_kern.c  xdp_redirect_user  xdp_redirect_user.c  xdp_redirect_user_kern.c
ebpf/doc/: NOTES.txt
frontend/: ast.cpp  ast.h  frontend.cpp  frontend.h  lexer.cpp  lexer.h  namespace.cpp  namespace.h  parser.cpp  parser.h  scope.cpp  scope.h  token.cpp  token.h  type.cpp  type.h
memory/: arena.cpp  arena.h
midend/: ast_visitor.cpp  ast_visitor.h  midend.cpp  midend.h  potential_type.cpp  potential_type.h  type_checker.cpp  type_checker.h
midend/passes/: builtin_methods.cpp  builtin_methods.h  declared_type.cpp  declared_type.h  drypass.cpp  drypass.h  name_binding.cpp  name_binding.h  potential_type.cpp  potential_type.h  scope_hierarchy.cpp  scope_hierarchy.h  select_type.cpp  select_type.h
passes/: builtin_methods.cpp  builtin_methods.h  declared_type.cpp  declared_type.h  drypass.cpp  drypass.h  name_binding.cpp  name_binding.h  potential_type.cpp  potential_type.h  scope_hierarchy.cpp  scope_hierarchy.h  select_type.cpp  select_type.h
research/: NOTES.md  NOTES.txt  P4-16 Compiler Design.djvu  P4-16-v1.2.1.djvu
testdata/: action-call-ebpf.p4  action-call-table-ebpf.p4  action-param.p4  action-param1.p4  action-synth.p4  action-uses.p4  action_call_ebpf.p4  action_call_table_ebpf.p4  action_param.p4  action_param1.p4  apply-cf.p4  apply.p4  arch3.p4  array-field.p4  array_field.p4  assign.p4  bitExtract.p4  bitwise-and.p4  calc-ebpf.p4  call.p4  cases.p4  cast-call.p4  cast.p4  chain.p4  chain1.p4  complex.p4  constructor-cast.p4  constructor_cast.p4  control-as-param.p4  copy.p4  copyprop1.p4  count-add-ebpf.p4  count-ebpf.p4  count_add_ebpf.p4  count_ebpf.p4  decl.p4  decl2.p4  direct-action.p4  direct-call1.p4  duplicate-method.p4  (+89 more)
testdata/include/: core.p4  ebpf_headers.p4  ebpf_model.p4  ubpf_model.p4  v1model.p4  xdp_model.p4
